[package]
name = "execgraph"
version = "0.1.0"
authors = ["Robert T. McGibbon <rmcgibbo@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
name = "execgraph"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "execgraph-bench"
required-features = ["coz"]

[profile.release]
debug = 1
incremental = true
lto = "off"

[dependencies]
advisory-lock = "0.3.0"
aho-corasick = "1.0.5"
anyhow = "1.0.75"
async-channel = "1.9.0"
async-priority-channel = "0.1.0"
axum = { version = "0.6.20", features = ["json", "headers"] }
base64 = "0.21.4"
bitvec = "1.0.1"
bufreaderwriter = "*"
clap = { version = "4.4.3", features = ["derive"] }
coz = { version = "0.1.3", optional = true }
dashmap = "5.5.3"
derivative = "2.2.0"
event-listener = "3.0.0"
futures = "0.3.28"
gethostname = "0.4.3"
grep-cli = "0.1.9"
hyper = "0.14.27"
humantime = "2.1.0"
lazy_static = "1.4.0"
libc = "0.2.148"
lzzzz = "1.0.4"
notify = "6.1.1"
nix = { version = "0.27.1", features = ["fs", "signal"] }
postcard = { version = "1.0.7", features = ["use-std"], default-features = false }
petgraph = { version = "0.6.4", features = ["graphmap"], default-features = false }
pyo3 = { version = "0.19.2", optional = true }
pythonize = { version = "0.19.0", optional = true }
quantiles = "0.7.1"
rand = "0.8.5"
regex = "1.9.5"
reqwest = { version = "0.11.20", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shell-words = "1.1.0"
slotmap = "1.0.6"
sysinfo = "0.29.10"
termcolor = "1.2.0"
thiserror = "1.0.48"
time = "*"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-command-fds = "0.2.1"
tokio-pipe = "0.2.12"
tokio-util = "0.7.8"
tokio-stream = {version = "0.1.14", features=["net"]}
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "add-extension", "sensitive-headers", "util"] }
tracing = "0.1.37"
# tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt", "local-time"] }
url = "2.4.1"
whoami = "1.4.1"

[build-dependencies]
pyo3-build-config = { version = "0.19.2" }

# https://pyo3.rs/v0.11.1/faq.html#i-cant-run-cargo-test-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
# to run rust tests, need to do ``$ cargo test --no-default-features``
[features]
python = [ "pyo3/extension-module", "pyo3", "pythonize" ]
default = [ "python" ]
cozprof = [ "coz" ]
