[package]
name = "execgraph"
version = "0.1.0"
authors = ["Robert T. McGibbon <rmcgibbo@gmail.com>"]
edition = "2018"
resolver = "2"

[lib]
name = "execgraph"
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = 1
incremental = true
lto = "off"

[dependencies]
advisory-lock = "0.3.0"
aho-corasick = "1.1.2"
anyhow = "1.0.81"
async-channel = "1.9.0"
async-priority-channel = "0.1.0"
axum = { version = "0.6.20", features = ["json", "headers"] }
base64 = "0.21.7"
bitvec = "1.0.1"
bufreaderwriter = "*"
clap = { version = "4.5.3", features = ["derive"] }
coz = { version = "0.1.3", optional = true }
dashmap = "5.5.3"
derivative = "2.2.0"
event-listener = "3.1.0"
futures = "0.3.30"
gethostname = "0.4.3"
grep-cli = "0.1.10"
hyper = "0.14.28"
humantime = "2.1.0"
lazy_static = "1.4.0"
libc = "0.2.153"
lzzzz = "1.0.5"
notify = "6.1.1"
nix = { version = "0.27.1", features = ["fs", "signal"] }
postcard = { version = "1.0.8", features = ["use-std"], default-features = false }
petgraph = { version = "0.6.4", features = ["graphmap"], default-features = false }
pyo3 = { version = "0.19.2", optional = true }
pythonize = { version = "0.19.0", optional = true }
quantiles = "0.7.1"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.26", default-features = false }
ringbuffer = "0.15.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shell-words = "1.1.0"
slotmap = "1.0.7"
sysinfo = "0.29.11"
termcolor = "1.4.1"
thiserror = "1.0.58"
time = "*"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tokio-command-fds = "0.2.1"
tokio-pipe = "0.2.12"
tokio-util = "0.7.10"
tokio-stream = {version = "0.1.15", features=["net"]}
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "add-extension", "sensitive-headers", "util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "local-time"] }
url = "2.5.0"
whoami = "1.5.1"

[build-dependencies]
pyo3-build-config = { version = "0.19.2" }

# https://pyo3.rs/v0.11.1/faq.html#i-cant-run-cargo-test-im-having-linker-issues-like-symbol-not-found-or-undefined-reference-to-_pyexc_systemerror
# to run rust tests, need to do ``$ cargo test --no-default-features``
[features]
python = [ "pyo3/extension-module", "pyo3", "pythonize" ]
default = [ "python" ]
cozprof = [ "coz" ]
